# uv-deploy-tools

./: .gitignore  CHANGELOG.md  LICENSE  README.md  deploy.py  deploy_passwords.txt  gui_progress.txt  pyproject.toml  transfer_progress.txt
configs/: servers.example.yaml
templates/: run.bat.template  setup.bat.template
