[project]
name = "uv-deploy-tools"
version = "0.2.0"
description = "Gestion du déploiement des packages Python dans ORBIT"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "customtkinter>=5.2.2",
    "paramiko>=4.0.0",
    "plyer>=2.1.0",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "tomli>=2.3.0",
]

